@@ -5,6 +5,7 @@
 	<targetVersion>0.18.1722</targetVersion>
 	<url>https://ludeon.com/forums/index.php?topic=26276.0</url>
 	<description>"advanced powergeneration"
+	Ver.: b18-1.0.3
 	
 	a light in every corner, an extra workbench there, maybe another cooking stove - wondering where your power went?
 	
@@ -13,5 +14,5 @@
 	
 	Download links for Dropbox (current or older versions) or Steamworkshop link for current Rimworld version can be found in the ludeon forum thread linked above.
 	
-	Languages: english, german, ChineseSimplified (thx to WishingLaws)</description>
+	Languages: english, german, ChineseSimplified (thx to WishingLaws), Russian (thx to Hanabishi)</description>
 </ModMetaData>
