@@ -2,6 +2,6 @@
 <ModSyncNinjaData>
 	<ID>96d0fffe-1d75-4426-922e-13e4bcf1efe8</ID>
 	<ModName>advanced powergeneration</ModName>
-	<Version>b18-1.0.0</Version>
+	<Version>b18-1.0.3</Version>
 	<SaveBreaking>false</SaveBreaking>
 </ModSyncNinjaData>
